# Linkora

./: .gitignore  CMakeLists.txt  README.md  README.ru.md
config/: client.yaml  host.yaml
scripts/: install_deps.sh  install_deps_windows.bat
src/app/: auth.cpp  auth.h  client_main.cpp  config.cpp  config.h  coordinator_api.cpp  coordinator_api.h  hash_main.cpp  host_main.cpp  port_open.cpp  port_open.h
src/core/: crypto.cpp  crypto.h  password.cpp  password.h  tunnel.h  tunnel_linux.cpp  tunnel_windows.cpp
src/gui/: gui_main.cpp  main_window.cpp  main_window.h
src/network/: frame.cpp  frame.h  route_manager.h  route_manager_linux.cpp  route_manager_windows.cpp  transport.cpp  transport.h
src/utils/: logging.cpp  logging.h
tests/: CMakeLists.txt  test_crypto.cpp  test_frame.cpp  test_password.cpp
